IN-418 sync apis & scheduler
Approved-by: Gianluca Boiano
Approved-by: Davide Polonio
